framec/tests/snapshots/rust_snapshots__hsm.snap
---
source: framec/tests/rust_snapshots.rs
expression: "compile_fixture(\"02_hsm\", \"rust\")"
---
#[allow(dead_code)]
#[allow(non_camel_case_types)]
#[allow(non_snake_case)]
#[allow(unused_variables)]
#[allow(unused_mut)]
#[allow(unused_imports)]
#[allow(clippy::assign_op_pattern)]
#[allow(clippy::clone_on_copy)]
#[allow(clippy::derivable_impls)]
#[allow(clippy::match_single_binding)]
#[allow(clippy::needless_return)]
#[allow(clippy::new_without_default)]
#[allow(clippy::single_match)]
mod _mini_hsm_framec {
    use super::*;
    #[derive(Clone, Debug)]
    #[allow(dead_code, non_camel_case_types)]
    enum MiniHsmFrameEvent {
        Wake {  },
        Sleep {  },
        Signal {  },
        FrameEnter { args: Vec<String> },
        FrameExit { args: Vec<String> },
    }

    #[derive(Clone)]
    #[allow(dead_code, non_camel_case_types)]
    enum MiniHsmFrameReturn {
        _Lifecycle(std::rc::Rc<dyn std::any::Any>),
    }

    #[allow(dead_code)]
    impl MiniHsmFrameEvent {
        fn name(&self) -> &'static str {
            match self {
                MiniHsmFrameEvent::Wake { .. } => "wake",
                MiniHsmFrameEvent::Sleep { .. } => "sleep",
                MiniHsmFrameEvent::Signal { .. } => "signal",
                MiniHsmFrameEvent::FrameEnter { .. } => "$>",
                MiniHsmFrameEvent::FrameExit { .. } => "<$",
            }
        }
    }

    #[derive(Clone, Debug)]
    #[allow(dead_code, non_camel_case_types)]
    enum MiniHsmFrameValue {
        Int(i64),
        Float(f64),
        Bool(bool),
        Str(String),
        List(Vec<Self>),
        Dict(std::collections::HashMap<String, Self>),
    }

    #[allow(dead_code, non_camel_case_types)]
    struct MiniHsmFrameContext {
        event: std::rc::Rc<MiniHsmFrameEvent>,
        _return: Option<MiniHsmFrameReturn>,
        _data: std::collections::HashMap<String, MiniHsmFrameValue>,
        _transitioned: bool,
    }

    impl MiniHsmFrameContext {
        fn new(event: std::rc::Rc<MiniHsmFrameEvent>, default_return: Option<MiniHsmFrameReturn>) -> Self {
            Self {
                event,
                _return: default_return,
                _data: std::collections::HashMap::new(),
                _transitioned: false,
            }
        }
    }

    #[allow(dead_code, non_camel_case_types)]
    #[derive(Clone)]
    enum MiniHsmStateContext {
        Live,
        Awake,
        Asleep,
        Empty,
    }

    impl Default for MiniHsmStateContext {
        fn default() -> Self {
            MiniHsmStateContext::Live
        }
    }

    #[allow(dead_code, non_camel_case_types)]
    #[derive(Clone)]
    struct MiniHsmCompartment {
        state: String,
        state_context: MiniHsmStateContext,
        enter_args: Vec<String>,
        exit_args: Vec<String>,
        forward_event: Option<MiniHsmFrameEvent>,
        parent_compartment: Option<Box<MiniHsmCompartment>>,
    }

    impl MiniHsmCompartment {
        fn new(state: &str) -> Self {
            let state_context = match state {
                "Live" => MiniHsmStateContext::Live,
                "Awake" => MiniHsmStateContext::Awake,
                "Asleep" => MiniHsmStateContext::Asleep,
                _ => MiniHsmStateContext::Empty,
            };
            Self {
                state: state.to_string(),
                state_context,
                enter_args: Vec::new(),
                exit_args: Vec::new(),
                forward_event: None,
                parent_compartment: None,
            }
        }
    }

    #[allow(dead_code)]
    pub struct MiniHsm {
        _state_stack: Vec<MiniHsmCompartment>,
        __compartment: MiniHsmCompartment,
        __next_compartment: Option<MiniHsmCompartment>,
        _context_stack: Vec<MiniHsmFrameContext>,
        pub awakes: i32,
        pub sleeps: i32,
        pub last: String,
    }

    #[allow(non_snake_case)]
    impl MiniHsm {
        pub fn new() -> Self {
            Self {
                _state_stack: Vec::new(),
                _context_stack: Vec::new(),
                awakes: 0,
                sleeps: 0,
                last: String::from(""),
                __compartment: MiniHsmCompartment::new("Live"),
                __next_compartment: None,
            }
        }

        pub fn __create() -> Self {
            let mut c = Self::new();
            c.__compartment = c.__prepareEnter("Live", vec![]);
            let __e = std::rc::Rc::new(MiniHsmFrameEvent::FrameEnter { args: c.__compartment.enter_args.clone() });
            let __ctx = MiniHsmFrameContext::new(std::rc::Rc::clone(&__e), None);
            c._context_stack.push(__ctx);
            c.__kernel(&__e);
            c._context_stack.pop();
            c
        }

        fn __hsm_chain(&mut self, leaf: &str) -> &'static [&'static str] {
            match leaf {
                "Live" => &["Live"],
                "Awake" => &["Live", "Awake"],
                "Asleep" => &["Live", "Asleep"],
                _ => &[],
            }
        }

        fn __prepareEnter(&mut self, leaf: &str, enter_args: Vec<String>) -> MiniHsmCompartment {
            let chain = self.__hsm_chain(leaf);
            let mut comp: Option<MiniHsmCompartment> = None;
            for name in chain.iter() {
                let mut new_comp = MiniHsmCompartment::new(name);
                new_comp.enter_args = enter_args.clone();
                if let Some(parent) = comp.take() {
                    new_comp.parent_compartment = Some(Box::new(parent));
                }
                comp = Some(new_comp);
            }
            comp.expect("chain must contain at least the leaf state")
        }

        fn __prepareExit(&mut self, exit_args: Vec<String>) {
            self.__compartment.exit_args = exit_args.clone();
            let mut cursor = self.__compartment.parent_compartment.as_deref_mut();
            while let Some(c) = cursor {
                c.exit_args = exit_args.clone();
                cursor = c.parent_compartment.as_deref_mut();
            }
        }

        fn __kernel(&mut self, __e: &std::rc::Rc<MiniHsmFrameEvent>) {
            // Route event to current state.
            self.__router(__e);
            // Drain any transitions queued by the handler.
            while self.__next_compartment.is_some() {
                let next_compartment = self.__next_compartment.take().expect("invariant: while-loop guard checked is_some()");
                // Exit the current (leaf) state.
                let exit_args = self.__compartment.exit_args.clone();
                let exit_event = std::rc::Rc::new(MiniHsmFrameEvent::FrameExit { args: exit_args });
                self.__router(&exit_event);
                // Switch to the new compartment.
                self.__compartment = next_compartment;
                // Three-branch forward-event handling (RFC-0025 Track B.1: forward
                // event is matched on enum variant; $> recognition is now a
                // structural match, not a string compare).
                match self.__compartment.forward_event.take() {
                    None => {
                        // No forwarded event — synthesize a fresh $>.
                        let enter_args = self.__compartment.enter_args.clone();
                        let enter_event = std::rc::Rc::new(MiniHsmFrameEvent::FrameEnter { args: enter_args });
                        self.__router(&enter_event);
                    }
                    Some(fwd) if matches!(fwd, MiniHsmFrameEvent::FrameEnter { .. }) => {
                        // Forwarded event IS $> — dispatch directly so the
                        // destination's $> handler receives the caller's payload.
                        let fwd_rc = std::rc::Rc::new(fwd);
                        self.__router(&fwd_rc);
                    }
                    Some(fwd) => {
                        // Forwarded event is not $> — initialize the destination
                        // with a fresh $>, then dispatch the forward.
                        let enter_args = self.__compartment.enter_args.clone();
                        let enter_event = std::rc::Rc::new(MiniHsmFrameEvent::FrameEnter { args: enter_args });
                        self.__router(&enter_event);
                        let fwd_rc = std::rc::Rc::new(fwd);
                        self.__router(&fwd_rc);
                    }
                }
                for ctx in self._context_stack.iter_mut() {
                    ctx._transitioned = true;
                }
            }
        }

        fn __router(&mut self, __e: &std::rc::Rc<MiniHsmFrameEvent>) {
            let __ev: &MiniHsmFrameEvent = __e;
            match self.__compartment.state.as_str() {
                "Live" => self._state_Live(__ev),
                "Awake" => self._state_Awake(__ev),
                "Asleep" => self._state_Asleep(__ev),
                _ => {}
            }
        }

        fn __transition(&mut self, next_compartment: MiniHsmCompartment) {
            self.__next_compartment = Some(next_compartment);
        }

        pub fn wake(&mut self) {
            let __e = std::rc::Rc::new(MiniHsmFrameEvent::Wake {});
            let mut __ctx = MiniHsmFrameContext::new(std::rc::Rc::clone(&__e), None);
            self._context_stack.push(__ctx);
            self.__kernel(&__e);
            self._context_stack.pop();
        }

        pub fn sleep(&mut self) {
            let __e = std::rc::Rc::new(MiniHsmFrameEvent::Sleep {});
            let mut __ctx = MiniHsmFrameContext::new(std::rc::Rc::clone(&__e), None);
            self._context_stack.push(__ctx);
            self.__kernel(&__e);
            self._context_stack.pop();
        }

        pub fn signal(&mut self) {
            let __e = std::rc::Rc::new(MiniHsmFrameEvent::Signal {});
            let mut __ctx = MiniHsmFrameContext::new(std::rc::Rc::clone(&__e), None);
            self._context_stack.push(__ctx);
            self.__kernel(&__e);
            self._context_stack.pop();
        }

        fn _state_Live(&mut self, __e: &MiniHsmFrameEvent) {
            match __e {
                MiniHsmFrameEvent::Signal { .. } => { self._s_Live_hdl_user_signal(__e); }
                MiniHsmFrameEvent::Sleep { .. } => { self._s_Live_hdl_user_sleep(__e); }
                MiniHsmFrameEvent::Wake { .. } => { self._s_Live_hdl_user_wake(__e); }
                _ => {}
            }
        }

        fn _state_Awake(&mut self, __e: &MiniHsmFrameEvent) {
            match __e {
                MiniHsmFrameEvent::FrameEnter { .. } => { self._s_Awake_hdl_frame_enter(__e); }
                MiniHsmFrameEvent::Signal { .. } => { self._s_Awake_hdl_user_signal(__e); }
                _ => {}
            }
        }

        fn _state_Asleep(&mut self, __e: &MiniHsmFrameEvent) {
            match __e {
                MiniHsmFrameEvent::FrameEnter { .. } => { self._s_Asleep_hdl_frame_enter(__e); }
                MiniHsmFrameEvent::Signal { .. } => { self._s_Asleep_hdl_user_signal(__e); }
                MiniHsmFrameEvent::Wake { .. } => { self._s_Asleep_hdl_user_wake(__e); }
                _ => {}
            }
        }

        fn _s_Live_hdl_user_signal(&mut self, __e: &MiniHsmFrameEvent) {
    ;
        }

        fn _s_Live_hdl_user_sleep(&mut self, __e: &MiniHsmFrameEvent) {
    ;
        }

        fn _s_Live_hdl_user_wake(&mut self, __e: &MiniHsmFrameEvent) {
    ;
        }

        fn _s_Awake_hdl_frame_enter(&mut self, __e: &MiniHsmFrameEvent) {
            self.awakes = self.awakes + 1;
        }

        fn _s_Awake_hdl_user_signal(&mut self, __e: &MiniHsmFrameEvent) {
            self.last = "awake"
            self._state_Live(__e);
        }

        fn _s_Asleep_hdl_frame_enter(&mut self, __e: &MiniHsmFrameEvent) {
            self.sleeps = self.sleeps + 1;
        }

        fn _s_Asleep_hdl_user_signal(&mut self, __e: &MiniHsmFrameEvent) {
            self.last = "asleep"
            self._state_Live(__e);
        }

        fn _s_Asleep_hdl_user_wake(&mut self, __e: &MiniHsmFrameEvent) {
            let mut __compartment = self.__prepareEnter("Awake", vec![]);
            self.__transition(__compartment);
            return;
        }
    }
}
pub use _mini_hsm_framec::*;
